<resources>
    <string name="app_name">eMarket</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="greeting">Hello there! Welcome back</string>
    <string name="signin">Sign in</string>
    <string name="create_account">CREATE A NEW ACCOUNT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Sign up</string>
    <string name="password2">Confirm Password</string>
    <string name="signout">Sign out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip_button">SKIP</string>
    <string name="intro_free_shipping">FREE SHIPPING</string>
    <string name="intro_easy_payment">Easy Payment</string>
    <string name="intro_sale">MEGA SALE</string>
    <string name="name">Full Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="email">Email</string>
    <string name="intro_online_shopping">Online Shopping</string>
    <string name="intro_fast_delivery">Fast Delivery</string>
    <string name="category">Category</string>
    <string name="product_name">Samsung S21 Plus</string>
    <string name="product_description">5G, OS: Android 10, RAM: 16 GB, Internal Storage: 256 GB, Primary Camera: 64 MP, Secondary Camera: 13 MP</string>
    <string name="price">$ 200</string>
    <string name="add_cart">ADD TO CART</string>
    <string name="specification">Specifications</string>
    <string name="title">Model Name</string>
    <string name="specification_value">OnePlus 9 Pro 5G</string>
    <string name="specification_title">Model Name</string>
    <string name="review_title">Reviews</string>
    <string name="review_titles"><![CDATA[Worthy & Best Product]]></string>
    <string name="review_name">Prasad Pawtekar</string>
    <string name="review_date">2022-01-16 13:24:52</string>
    <string name="review_content">It\'s worth $745. Lightweight and thin. Easy to use. Mobile has fingerprint and facial recognition to unlock. Longer battery life. RAM and ROM are good. Average camera quality. Worth buying it.</string>
    <string name="total_bill_amount">Total Bill Amount</string>
    <string name="unit_price">Unit Price</string>
    <string name="checkout">Checkout</string>
    <string name="quantity">Quantity</string>
    <string name="amount">Amount</string>
    <string name="address_title">HOME</string>
    <string name="address">B4, Prabha Anand Sankul, Stadium Road, Nashik - 422101</string>
    <string name="select_address">Select Delivery Address</string>
    <string name="add_address">Add Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="set_address_title">Address Title</string>
    <string name="set_address">Address</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="cash">Cash On Delivery</string>
    <string name="banking">Internet Banking</string>
    <string name="card">Credit Card / Debit Card</string>
    <string name="paypal">PayPal</string>
    <string name="select_payment">Select Payment Option</string>
    <string name="cart_items">Cart Items</string>
    <string name="place_order"><![CDATA[Confirm & Place Order]]></string>
    <string name="delivery_address">Delivery Address</string>
    <string name="payment_option">Payment Option</string>
    <string name="intro_online_shopping_content">Shop From the Comfort of your Home</string>
    <string name="intro_payment_content">Enjoy Hassle-free Checkout</string>
    <string name="intro_shipping_content">Experience our Lightning-fast Shipping Service</string>
</resources>