<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarThumbVertical="@android:color/transparent"
    android:scrollbarTrackVertical="@android:color/transparent"
    tools:context=".view.fragment.CheckoutSummaryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginHorizontal="@dimen/_30dp"
        android:paddingBottom="@dimen/_30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_cart_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/_18sp"
            android:layout_marginVertical="@dimen/_10dp"
            android:text="@string/cart_items" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_checkout_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_cart_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_product_checkout"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_bill_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rv_checkout_cart"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/_18sp"
            android:layout_marginVertical="@dimen/_10dp"
            android:text="@string/total_bill_amount"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_total_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rv_checkout_cart"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/_18sp"
            android:layout_margin="@dimen/_10dp"
            android:text="@string/price"/>

        <TextView
            android:id="@+id/tv_addresses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_bill_title"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/_18sp"
            android:layout_marginVertical="@dimen/_10dp"
            android:text="@string/delivery_address"/>

        <TextView
            android:id="@+id/tv_address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_addresses"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/_15sp"
            android:layout_margin="@dimen/_5dp"
            android:textColor="@color/textColorSecondary"
            android:text="@string/address_title"/>

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_address_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/textColorSecondary"
            android:textSize="@dimen/_15sp"
            android:layout_margin="@dimen/_5dp"
            android:text="@string/address"/>

        <TextView
            android:id="@+id/tv_payment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_address"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/_18sp"
            android:layout_marginVertical="@dimen/_10dp"
            android:text="@string/payment_option"/>

        <TextView
            android:id="@+id/tv_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_address"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/textColorSecondary"
            android:textSize="@dimen/_15sp"
            android:layout_margin="@dimen/_10dp"
            android:text="@string/cash"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_payment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/AppButtonStyle"
            android:layout_margin="@dimen/_20dp"
            android:text="@string/place_order"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>