<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragment.AddAddressFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/_20sp"
        android:layout_marginVertical="@dimen/_30dp"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:text="@string/add_new_address" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15sp"
        android:textColor="@color/textColorSecondary"
        android:layout_marginVertical="@dimen/_10dp"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:text="@string/set_address_title" />

    <EditText
        android:id="@+id/et_address_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bounding_box"
        android:gravity="top"
        android:layout_marginHorizontal="@dimen/_20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15sp"
        android:textColor="@color/textColorSecondary"
        android:layout_marginVertical="@dimen/_10dp"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:text="@string/set_address" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine|textCapSentences"
        android:minLines="3"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:background="@drawable/bounding_box"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/cancel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>