<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".view.fragment.CheckoutDeliveryFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20dp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/_22sp"
        android:text="@string/select_address" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_addresses"
        android:layout_marginHorizontal="@dimen/_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_address"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_add_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/AppButtonStyle"
            android:layout_margin="@dimen/_10dp"
            android:text="@string/add_address" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            style="@style/AppButtonStyle"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/_10dp"
            android:text="@string/next" />


    </LinearLayout>



</LinearLayout>