<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/_10dp"
    android:paddingHorizontal="@dimen/_30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_review_title"
        android:layout_width="@dimen/auto_adjust"
        android:layout_height="wrap_content"
        android:text="@string/review_titles"
        android:textSize="@dimen/_15sp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <me.zhanghai.android.materialratingbar.MaterialRatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        app:mrb_progressTint="@color/rating_star"
        app:mrb_fillBackgroundStars="true"
        android:rating="3.5"
        android:maxHeight="@dimen/_20dp"
        android:minHeight="@dimen/_20dp"
        android:maxWidth="@dimen/_40dp"
        android:minWidth="@dimen/_40dp"
        android:stepSize="0.1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_review_title"/>

    <TextView
        android:id="@+id/tv_review_name"
        android:layout_width="@dimen/auto_adjust"
        android:layout_height="wrap_content"
        android:text="@string/review_name"
        app:layout_constraintTop_toBottomOf="@id/tv_review_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_review_date"
        android:layout_width="@dimen/auto_adjust"
        android:layout_height="wrap_content"
        android:text="@string/review_date"
        android:textColor="@color/textColorSecondary"
        app:layout_constraintTop_toBottomOf="@id/tv_review_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_review_content"
        android:layout_width="@dimen/auto_adjust"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15sp"
        android:text="@string/review_content"
        app:layout_constraintTop_toBottomOf="@id/tv_review_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_review_content"
        android:background="@drawable/list_divider"/>

</androidx.constraintlayout.widget.ConstraintLayout>